--- a/docs/requirements/requirements.tex
+++ b/docs/requirements/requirements.tex
@@ -16,7 +16,7 @@
 
 \newglossaryentry{cliente}{
 	name=cliente,
-	description={Untente abilitato ad effettuare ordini su libri nuovi o usati, ha accesso alla parte di clientela del sito.}
+	description={Utente abilitato ad effettuare ordini su libri nuovi o usati, ha accesso alla parte di clientela del sito}
 }
 
 \newglossaryentry{venditore}{
@@ -42,6 +42,7 @@
 	\end{itemize}
 	Possono esserci funzioni aggiuntive che faranno parte del design\dots\quotedblbase
 	\section{Adattamento del testo}
-	L'applicazione consente di comprare e mettere in vendita libri (nuovi o usati) da parte di studenti o persone esterne, è prevista quindi una parte di utenza interessata all'acquisto di libri (\gls{cliente}) che potrà effettuare degli ordini, ed un'altra parte che metterà in vendita i propri libri (\gls{venditore}). La consegna di questi ultimi avviene direttamente al \Gls{campus} dell'università di Bologna situato a Cesena. A seguito della corretta effettuazione di tutto il processo di ordinazione, che prevederà l'inserimento dei dati di pagamento, verrà inviata una notifica al venditore.\\
-	\todo{FINIRE}
+	L'applicazione consente di comprare e mettere in vendita libri (nuovi o usati) da parte di studenti o persone esterne, è prevista quindi una parte di utenza interessata all'acquisto di libri (\gls{cliente}) che potrà effettuare degli ordini, ed un'altra parte che metterà in vendita i propri (\gls{venditore}). La consegna di questi ultimi avviene direttamente al \Gls{campus} dell'università di Bologna situato a Cesena, nel dominio attuale, non sono previsti ulteriori indirizzi di consegna. A seguito della corretta effettuazione di tutto il processo di ordinazione, che prevederà l'aggiunta dei libri che si vogliono acquistare nel carrello e il successivo inserimento dei dati di pagamento, verrà inviata una notifica al venditore che potrà procedere con la spedizione.
+	\section{Dettagli e ambiguità}
+	Nella specifica non è espressamente indicato se il venditore è anche in grado di effettuare ordini come un normale cliente (es. qualsiasi cliente può anche essere un venditore), quindi essendo elencati separatamente entrambi nella specifica verranno trattati come utenza separata, sarà dunque necessario cambiare account se si vuole passare da account di vendita ad account di clientela. Come email potrà essere utilizzata la stessa, ma solo un account di ciascuna tipologia potrà essere registrato per ogni indirizzo email (quindi 2 in totale).
 \end{document}
