--- a/docs/requirements/progettazione.tex
+++ b/docs/requirements/progettazione.tex
@@ -12,19 +12,21 @@
 \begin{document}
 	\maketitle
 	\section{Colore}
-	La prima fase consiste nella realizzazione del design UI dell'applicazione, per cominciare, abbiamo scelto una palette di colori con abbastanza contrasto da essere in linea con la specifica \textit{WCAG AAA}, in particolare, sono stati scelti i colori in codifica esadecimale: \textit{801524}, \textit{D9D9D9} e \textit{FFFFFF}.
+	La prima fase consiste nella realizzazione del design UI dell'applicazione, per cominciare, abbiamo scelto una palette di colori con sufficiente contrasto da essere in linea con la specifica \textit{WCAG AAA}, in particolare, sono stati scelti i colori in codifica esadecimale: \textit{801524}, \textit{D9D9D9} e \textit{FFFFFF}.
 	\section{Design mobile-first}
-	Per poter utilizzare l'approccio di \textit{progressive enhancement}, è stato necessario come prima cosa realizzare il design adatto a dispositivi mobili, come dispositivo di riferimento infatti, è stato usato uno dei modelli con la dimensione dello schermo più piccola, l'\textit{Iphone SE}.
+	Per poter utilizzare l'approccio di \textit{progressive enhancement}, è stato necessario per prima cosa realizzare il design adatto a dispositivi mobili; come dispositivo di riferimento, infatti, è stato usato uno dei modelli con la dimensione dello schermo più piccola, l'\textit{Iphone SE}.
 	\subsection{Pagina Home} \label{ss:home}
-	Come prima pagina appena si digita l'URL del sito, si ha la \textit{HomePage}, su questa si può vedere l'immagine della copertina del sito come prima impressione, e alcuni post di vendita nello spazio immediatamente successivo, nella parte superiore, si vede la barra di navigazione, sulla quale è presente il logo, il pulsante di notifiche, quello del profilo e infine il pulsante di navigazione, che se aperto, mostra il menu dal quale si può navigare nella pagina di ricerca avanzata o nel carrello.
+	Come prima pagina appena si digita l'URL del sito, si ha la \textit{HomePage}, sulla quale si può visualizzare per prima cosa l'immagine della copertina del sito e alcuni post di vendita nello spazio immediatamente successivo. Nella parte superiore della Home si vede la barra di navigazione, su cui sono presenti il logo, il pulsante di notifiche, quello del profilo e, infine, il pulsante di navigazione che, se aperto, mostra il menu dal quale si può navigare nella pagina di ricerca avanzata o nel carrello.
 	\subsection{Pagina di ricerca}
-	Qualora si navigasse alla pagina di ricerca avanzata, verrebbe presentata una pagina simile alla home, con la possibilità di ricercare e filtrare gli annunci di vendita di un libro basandosi sulla sua categoria, genere, autore, e prezzo, e con la possibilità di ordinare i risultati in ordine alfabetico, prezzo più alto ecc\dots
+	Navigando alla pagina di ricerca avanzata, viene presentata una pagina simile alla Home, con la possibilità di ricercare e filtrare gli annunci di vendita di un libro basandosi su categoria, genere, autore, e prezzo, e di ordinare i risultati in ordine alfabetico, prezzo più alto ecc\dots
 	\subsection{Pagina di registrazione e di accesso}
-	Se si tenta di andare nella pagina del carrello \hyperref[ss:home]{(vedi home)} o di cliccare sul bottone di aggiunta al carrello \hyperref[ss:home]{(vedi dettaglio vendita)} senza aver fatto l'accesso in precedenza, si verrà portati alla pagina di login, la quale presenta i campi necessari per poter effettuare l'accesso, qualora non avesse ancora un account, ci si può registrare con il link rosso in fondo alla pagina. Questi dati possono essere visualizzati e cambiati dalla pagina dell'account \hyperref[ss:home]{(vedi home)}.
+	Se si tenta di andare nella pagina del carrello \hyperref[ss:home]{(vedi Home)} o di cliccare sul bottone di aggiunta al carrello \hyperref[ss:home]{(vedi dettaglio vendita)} senza aver fatto l'accesso in precedenza, si verrà portati alla pagina di login, la quale presenta i campi necessari per poter effettuare l'accesso. Qualora si non avesse ancora un account, è possibile registrarsi cliccando sul link situato in fondo alla pagina. I dati personali di un utente possono essere visualizzati e cambiati dalla pagina dell'account \hyperref[ss:home]{(vedi Home)}.
 	\subsection{Pagina di dettaglio di vendita} \label{ss:dettvend}
-	Per poter aggiungere un libro al carrello, è necessario cliccare su un articolo presente in lista, dopo la navigazione in questa pagina, viene presentata in dettaglio la descrizione del libro, le immagini associate all'annuncio di vendita, l'autore, genere, categoria ed ISBN. Il bottone che viene presentato in fondo alla pagina è quello che serve per l'aggiunta al carrello.
+	Per poter aggiungere un libro al carrello, è necessario cliccare su un articolo presente in lista. Dopodiché, vengono presentate le informazioni relative al prodotto come la descrizione del libro, le immagini associate all'annuncio di vendita, l'autore, il genere, la categoria ed l'ISBN. Per inserire il libro nel carrello sarà sufficiente cliccare sul relativo bottone.
 	\subsection{Pagina di carrello}
-	Una pagina in cui tutti i libri aggiunti in precedenza vengono raggruppati per poter essere acquistati in una volta sola, viene mostrato quindi il prezzo complessivo e il bottone per poter procedere all'ordine e poter tracciare successivamente lo stato della spedizione al campus. Si possono anche rimuovere articoli dal carrello cliccando sull'apposita \textit{X}.
+	In questa pagina, tutti i libri aggiunti in precedenza vengono raggruppati per poter essere acquistati in una volta sola. Compaiono quindi il prezzo complessivo e il bottone per poter procedere all'ordine e al pagamento. E' possibile inoltre rimuovere articoli dal carrello cliccando sull'apposita \textit{X}.
 	\subsection{Pagamento e ordine}
-	Se si clicca sul bottone \textit{"Procedi all'ordine"} nella pagina del carrello, si verrà portati alla pagina in cui è possibile inserire i propri dati di pagamento, se il tutto avviene con successo, i libri acquistati potranno essere visualizzati nella pagina degli ordini, nella quale è possibile anche vedere lo stato di consegna relativo ad ogni ordine.
+	Cliccando sul bottone \textit{"Procedi all'ordine"} nella pagina del carrello, si verrà indirizzati alla pagina in cui è possibile inserire i propri dati di pagamento: se il tutto avviene con successo, i libri acquistati potranno essere visualizzati nella pagina degli ordini, nella quale è possibile anche monitorare lo stato di consegna relativo a ciascun ordine.
+	\subsection{Pagina del venditore}
+	Quando l'utente venditore effettua il login, viene reindirizzato su una parte del sito differente, alla quale l'utente cliente non ha accesso. All'interno di questa pagina è possibile registrare libri o modificarne di già esistenti, aggiungere annunci, visualizzare gli ordini degli utenti e cambiarne lo stato.
 \end{document}
